--- a/css/index.css
+++ b/css/index.css
@@ -1,85 +1,91 @@
-h1 {
-  font-family: 'Lobster', cursive;
-  font-size: 400%;
-}
-
-h2 {
-  font-family: 'ZCOOL QingKe HuangYou', cursive;
-  font-size: 250%;
-}
-
-.logo {
-  width: 100px;
-  height: 100px;
-  display: inline;
-  float: left;
-  margin-left: 40px;
-}
-
 .center-text{
-position: relative;
-  left: -25px;
-  width: 100%;
-  text-align: center;
-}
+  position: relative;
+    left: -25px;
+    width: 100%;
+    text-align: center;
+  }
 
-.navbar{
-  font-family: 'ZCOOL QingKe HuangYou', cursive;
-  font-size: 200%;
-  list-style-type: none;
-  margin: 0px -10px;
-  padding: 0;
-  overflow: hidden;
-  background-color: #F9519A;
-  position: sticky;
-  top: 0;
 
-}
+h1 {
+    font-family: 'Lobster', cursive;
+    font-size: 400%;
+  }
+  
+  h2 {
+    font-family: 'ZCOOL QingKe HuangYou', cursive;
+    font-size: 250%;
+  }
+  
+  p {
+    font-family: 'Raleway', sans-serif;
+    font-size: 130%;
+  }
+  ul.navbar{
+    font-family: 'ZCOOL QingKe HuangYou', cursive;
+    font-size: 200%;
+    list-style-type: none;
+    margin: 0px -10px;
+    padding: 0;
+    background-color: #F9519A;
+    position: sticky;
+    top: 0;
+    display: inline-block;
+    width:100%;
+    z-index:99;
+  }
+  ul.navbar ul {
+    display:none;
+    list-style-type: none;
+  }
+  ul.navbar ul li {
+    color: #270986;
+  }
+  ul.navbar li{
+      float:left;
+      position: relative;
+      background: none;
+  }
+  ul.navbar li a {
+      display: block;
+      padding: 14px 16px;
+      text-decoration: none;
+      color: #270986;
+  }
+   ul.navbar li a:hover:not(.active) {
+       color: #D9C2C2;
+   }
+   ul.navbar ul li {
+       float:none;
+       position: relative;
+   }
 
-.navbar li{
-  float: left;
-  border-right:3px solid rgb(255, 255, 255);
+   .navbar li{
+    float: left;
+    border-right:3px solid rgb(255, 255, 255);
+  
+  }
+  
 
-}
-
-.navbar li a{
-  display: inline-block;
-  color: #270986;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.navbar li:last-child {
-  border-right: none;
-}
-
-.navbar li a:hover:not(.active) {
-  color: #D9C2C2;
-}
-
-.active {
-  background-color: #9740F9;
-}
-
-.viewer {
-  overflow: hidden;
-}
-
-.bird {
-  z-index: 3;
-  margin: 50px;
-  position: fixed;
+   .active {
+    background-color: #9740F9;
+  }
+  ul.navbar li:hover > ul {
+      display:block;
+  }
+  nav ul ul {
+    background-color: #F9519A;
+    border-radius:0px;
+    position:absolute;
 }
 
 .sliding-bg {
   z-index: 1;
   position: fixed;
   margin: 0;
-  background: url("../img/main_bg.png") repeat-x;
+  /*background: url("../img/main_bg.png") repeat-x;
   height: 600px;
-  width: 9090px;
-  animation: slide 60s linear infinite;
+  width: 9090px;*/
+  animation: slide 20s linear infinite;
 }
 
 @keyframes slide{
@@ -87,18 +93,18 @@ position: relative;
     transform: translate3d(0, 0, 0);
   }
   100%{
-    transform: translate3d(-3030px, 0, 0);
+    transform: translate3d(-1010px, 0, 0);
   }
 }
 
 .sliding-asteroid {
   z-index: 2;
-  position: fixed;
+  position: absolute;
   margin: 0px;
-  background: url("../img/asteroid_layer.png") repeat-x;
+  top: 0px;
   height: 600px;
   width: 6060px;
-  animation: slide2 30s linear infinite;
+  animation: slide2 10s linear infinite;
 }
 
 @keyframes slide2{
@@ -106,11 +112,11 @@ position: relative;
     transform: translate3d(0, 0, 0);
   }
   100%{
-    transform: translate3d(-3030px, 0, 0);
+    transform: translate3d(-1010px, 0, 0);
   }
 }
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+.bird{
+  z-index:3;
+  position:absolute;
+  
 }
